--- a/estilo/style.css
+++ b/estilo/style.css
@@ -7,6 +7,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 :root {
@@ -15,9 +16,11 @@
 }
 body {
     background-color: var(--cor2);
+    
 }
 main {
     height: 100vh;
+    
 }
 section {
     height: 100vh;
@@ -74,7 +77,6 @@ div.formulario form {
     border-radius: 10px;
 }
 div.formulario > div >input {
-    
     background-color: var(--cor1);
     block-size: 50px;
     inline-size: 200px;
@@ -85,4 +87,5 @@ div.formulario > div >input {
 div.formulario > div > a {
     text-decoration: none;
     color: var(--cor1);
+    border: 1px solid var(--cor1);
 }
