--- a/estilo/style.css
+++ b/estilo/style.css
@@ -30,6 +30,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 div.imagem{
     background-color: black;
@@ -40,6 +41,7 @@ div.imagem{
     background-size: cover;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 }
 
 div.formulario {
@@ -48,12 +50,13 @@ div.formulario {
     width: 250px;  
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     padding: 10px 0px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
 }
 h1 {
@@ -71,21 +74,33 @@ div.formulario form input {
     block-size: 30px;
     
 }
-div.formulario form {
+div.formulario div.email, div.senha {
     height: 40px;
     background-color: var(--cor2);
     border-radius: 10px;
+    margin-bottom: 10px;
 }
-div.formulario > div >input {
+div.formulario input.entrar {
     background-color: var(--cor1);
     block-size: 50px;
     inline-size: 200px;
     border-radius: 10px;
     color: white;
+    margin-bottom: 10px;
     
 }
-div.formulario > div > a {
+div.formulario div.esqueci-senha{ 
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+div.formulario div.esqueci-senha a {
     text-decoration: none;
+    font-weight: bolder;
     color: var(--cor1);
     border: 1px solid var(--cor1);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
 }
