--- a/estilo/style.css
+++ b/estilo/style.css
@@ -46,7 +46,7 @@ div.imagem{
 
 div.formulario {
     background-color: white;
-    height: 400px;
+    height: 350px;
     width: 250px;  
     display: flex;
     flex-direction: column;
@@ -72,6 +72,8 @@ p {
 div.formulario form input {
     border-radius: 5px;
     block-size: 30px;
+    width: 100%;
+    border: 1px solid black;
     
 }
 div.formulario div.email, div.senha {
@@ -79,14 +81,20 @@ div.formulario div.email, div.senha {
     background-color: var(--cor2);
     border-radius: 10px;
     margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 div.formulario input.entrar {
     background-color: var(--cor1);
-    block-size: 50px;
-    inline-size: 200px;
+    block-size: 40px;
+    width: 100%;
     border-radius: 10px;
     color: white;
     margin-bottom: 10px;
+    border: none;
     
 }
 div.formulario div.esqueci-senha{ 
@@ -103,4 +111,5 @@ div.formulario div.esqueci-senha a {
     flex-direction: row;
     justify-content: center;
     gap: 5px;
+    width: 100%;
 }
