--- a/estilo/style.css
+++ b/estilo/style.css
@@ -46,7 +46,7 @@ div.imagem{
 
 div.formulario {
     background-color: white;
-    height: 350px;
+    height: 320px;
     width: 250px;  
     display: flex;
     flex-direction: column;
@@ -96,7 +96,9 @@ div.formulario input.entrar {
     margin-bottom: 10px;
     border: none;
     cursor: pointer;
-    
+}
+div.formulario input.entrar:hover{
+    background-color: #56c4c0;
 }
 div.formulario div.esqueci-senha{ 
     display: flex;
@@ -104,13 +106,20 @@ div.formulario div.esqueci-senha{
     justify-content: center;
 }
 div.formulario div.esqueci-senha a {
+    background-color: #9cecea7c;
     text-decoration: none;
     font-weight: bolder;
     color: var(--cor1);
     border: 1px solid var(--cor1);
+    border-radius: 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     gap: 5px;
     width: 100%;
+    height: 40px;
+}
+div.formulario div.esqueci-senha a:hover {
+    background-color: #2f949254;
 }
