--- a/estilo/style.css
+++ b/estilo/style.css
@@ -16,14 +16,17 @@
 }
 body {
     background-color: var(--cor2);
-    
+    height: 100vh;
+    width: 100vw;
 }
 main {
     height: 100vh;
+    width: 100vw;
     
 }
 section {
     height: 100vh;
+    width: 100vw;
 }
 .login {
     display: flex;
@@ -34,8 +37,8 @@ section {
 }
 div.imagem{
     background-color: black;
-    height: 200px;
-    width: 250px;
+    height: 25vh;
+    width: 50vw;
     background-image: url("../imagens/predio2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -46,11 +49,11 @@ div.imagem{
 
 div.formulario {
     background-color: white;
-    height: 320px;
-    width: 250px;  
+    height: 40vh;
+    width: 50vw;  
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     border-bottom-left-radius: 20px;
