--- a/estilo/style.css
+++ b/estilo/style.css
@@ -64,23 +64,25 @@ div.formulario {
 }
 h1 {
     font-family: 'Unna', serif;
+    height: 3vh;
 }
 p {
     text-align: center;
     padding: 10px;
     font-family: 'Sometype Mono', monospace;
     font-size: 0.9em;
+    height: 5vh;
 }
 div.formulario form input {
     border-radius: 5px;
-    block-size: 30px;
+    height: 3.5vh;
     width: 100%;
     border: 1px solid black;
 
     
 }
 div.formulario div.email, div.senha {
-    height: 40px;
+    height: 5vh;
     width: 40vw;
     background-color: var(--cor2);
     border-radius: 10px;
@@ -93,7 +95,7 @@ div.formulario div.email, div.senha {
 }
 div.formulario input.entrar {
     background-color: var(--cor1);
-    block-size: 40px;
+    height: 5vh;
     width: 100%;
     border-radius: 10px;
     color: white;
@@ -122,7 +124,7 @@ div.formulario div.esqueci-senha a {
     align-items: center;
     gap: 5px;
     width: 100%;
-    height: 40px;
+    height: 5vh;
 }
 div.formulario div.esqueci-senha a:hover {
     background-color: #2f949254;
