--- a/estilo/style.css
+++ b/estilo/style.css
@@ -16,29 +16,21 @@
 }
 body {
     background-color: var(--cor2);
-    height: 100vh;
-    width: 100vw;
-}
-main {
-    height: 100vh;
-    width: 100vw;
     
 }
-section {
-    height: 100vh;
-    width: 100vw;
-}
+
 .login {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
     
 }
 div.imagem{
     background-color: black;
-    height: 25vh;
-    width: 80vw;
+    height: 250px;
+    width: 400px;
     background-image: url("../imagens/predio2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -49,8 +41,8 @@ div.imagem{
 
 div.formulario {
     background-color: white;
-    height: 40vh;
-    width: 80vw;  
+    height: 350px;
+    width: 400px;  
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -64,26 +56,26 @@ div.formulario {
 }
 h1 {
     font-family: 'Unna', serif;
-    height: 3vh;
+    
 }
 p {
     text-align: center;
     padding: 10px;
     font-family: 'Sometype Mono', monospace;
     font-size: 0.9em;
-    height: 5vh;
+    
 }
 div.formulario form input {
     border-radius: 5px;
-    height: 3.5vh;
-    width: 100%;
+    block-size: 30px;
+    width: 300px;
     border: 1px solid black;
 
     
 }
 div.formulario div.email, div.senha {
-    height: 5vh;
-    width: 40vw;
+    height: 40px;
+    width: 100%;
     background-color: var(--cor2);
     border-radius: 10px;
     margin-bottom: 10px;
@@ -95,7 +87,7 @@ div.formulario div.email, div.senha {
 }
 div.formulario input.entrar {
     background-color: var(--cor1);
-    height: 5vh;
+    height: 40px;
     width: 100%;
     border-radius: 10px;
     color: white;
@@ -124,7 +116,7 @@ div.formulario div.esqueci-senha a {
     align-items: center;
     gap: 5px;
     width: 100%;
-    height: 5vh;
+    height: 40px;
 }
 div.formulario div.esqueci-senha a:hover {
     background-color: #2f949254;
