--- a/estilo/table.css
+++ b/estilo/table.css
@@ -2,15 +2,15 @@
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
     div.imagem {
-        height: 30vh;
-        width: 60vw;
+        height: 300px;
+        width: 500px; 
     }
     div.formulario {
-        height: 40vh;
-        width: 60vw;
+        height: 400px;
+        width: 500px;
     }
     div.formulario div.email, div.senha {
-        width: 50vw;
+        width: 300px;
     }
     
 }
