--- a/estilo/style.css
+++ b/estilo/style.css
@@ -66,8 +66,6 @@ div.formulario form input {
     block-size: 30px;
     width: 300px;
     border: 1px solid black;
-
-    
 }
 div.formulario div.email, div.senha {
     height: 40px;
@@ -79,7 +77,14 @@ div.formulario div.email, div.senha {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    flex-wrap: nowrap;
+    padding: 0px 10px;
+}
+label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    
 }
 div.formulario input.entrar {
     background-color: var(--cor1);
