--- a/estilo/style.css
+++ b/estilo/style.css
@@ -16,12 +16,14 @@
 }
 body {
     background-color: var(--cor2);
+    
+}
+main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    
 }
 
 div.imagem{
