--- a/estilo/style.css
+++ b/estilo/style.css
@@ -23,11 +23,12 @@ body {
     align-items: center;
     margin: 0px 20px;
     height: 100vh;
-    overflow-y: hidden;
+    overflow-y: auto;
     
 }
 main {
     width: 100%;
+
 }
 div.imagem{
     background-color: black;
